src/objects/Playlist_Item__c.object
<CustomObject>
    <fields>
        <fullName>Artist__c</fullName>
        <formula>Song__r.Album__r.Artist__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Artist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playlist__c</fullName>
        <label>Playlist</label>
        <referenceTo>Playlist__c</referenceTo>
        <relationshipLabel>Playlist Items</relationshipLabel>
        <relationshipName>Playlist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Song__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Song</label>
        <referenceTo>Song__c</referenceTo>
        <relationshipLabel>Playlist Items</relationshipLabel>
        <relationshipName>Playlist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Playlist Item</label>
    <nameField>
        <displayFormat>PI-{00000000}</displayFormat>
        <label>Playlist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playlist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>